@@ -11,8 +11,7 @@
     <para>
     Thanks to members of the worldwide <ulink
     url="http://developer.gnome.org/projects/gtp/">GNOME Translation
-    Project</ulink>, under the leadership of Christian Rose and Danilo Šegan,
-    GNOME &version; offers support for 45 languages (at least 80 percent of
+    Project</ulink>, GNOME &version; offers support for 45 languages (at least 80 percent of
     strings translated).
 
 <!--
@@ -46,57 +45,66 @@
 	 don't end up supported will be removed prior to release [there is
 	 no harm in having more simple messages for translation]. Danilo -->
 
-    <itemizedlist>
-      <!-- 94.28% --><listitem><para>Albanian (5 million speakers)</para></listitem>
-      <!-- 84.37% --><listitem><para>Basque (580,000)</para></listitem>
-      <!-- 77.16% --><listitem><para>Bengali (189 million)</para></listitem>
-      <!-- 99.33% --><listitem><para>Brazilian Portuguese (175 million)</para></listitem>
-      <!-- 99.72% --><listitem><para>Bulgarian (9 million)</para></listitem>
-      <!-- 99.01% --><listitem><para>Catalan (7 million)</para></listitem>
-      <!-- 81.71% --><listitem><para>Chinese (Hong Kong)</para></listitem>
-      <!-- 97.95% --><listitem><para>Chinese (Taiwan) (40 million)</para></listitem>
-      <!-- 98.56% --><listitem><para>Chinese Simplified (over 1 billion)</para></listitem>
-      <!-- 98.52% --><listitem><para>Czech (11 million)</para></listitem>
-      <!-- 92.76% --><listitem><para>Danish (5.3 million)</para></listitem>
-      <!-- 99.93% --><listitem><para>Dutch (over 21 million)</para></listitem>
-      <!--  100%  --><listitem><para>English (341 million)</para></listitem>
-      <!-- 80.43% --><listitem><para>Estonian (1 million)</para></listitem>
-      <!-- 99.99% --><listitem><para>Finnish (over 5 million)</para></listitem>
-      <!-- 94.23% --><listitem><para>French (over 75 million)</para></listitem>
-      <!-- 100.00% --><listitem><para>Galician (3 million)</para></listitem>
-      <!-- 98.35% --><listitem><para>German (100 million)</para></listitem>
-      <!-- 99.98% --><listitem><para>Greek (15 million)</para></listitem>
-      <!-- 99.96% --><listitem><para>Gujarati (46 million)</para></listitem>
-      <!-- 90.70% --><listitem><para>Hindi (370 million)</para></listitem>
-      <!-- 98.30% --><listitem><para>Hungarian (14.5 million)</para></listitem>
-      <!-- 85.53% --><listitem><para>Indonesian (230 million)</para></listitem>
-      <!-- 93.26% --><listitem><para>Italian (60 million)</para></listitem>
-      <!-- 99.99% --><listitem><para>Japanese (over 125 million)</para></listitem>
-      <!-- 94.19% --><listitem><para>Korean (75 million)</para></listitem>
-      <!-- 99.99% --><listitem><para>Lithuanian (4 million)</para></listitem>
-      <!-- 96.69% --><listitem><para>Macedonian (2 million)</para></listitem>
-      <!-- 82.76% --><listitem><para>Nepali (16 million)</para></listitem>
-      <!-- 99.94% --><listitem><para>Norwegian Bookmal (5 million)</para></listitem>
-      <!-- 74.16% --><listitem><para>Persian</para></listitem>
-      <!-- 90.38% --><listitem><para>Polish (44 million)</para></listitem>
-      <!-- 95.69% --><listitem><para>Portuguese (43 million)</para></listitem>
-      <!-- 97.70% --><listitem><para>Punjabi (60 million)</para></listitem>
-      <!-- 91.85% --><listitem><para>Romanian (26 million)</para></listitem>
-      <!-- 99.98% --><listitem><para>Russian (170 million)</para></listitem>
-      <!-- 99.94% --><listitem><para>Serbian (10 million)</para></listitem>
-      <!-- 63.33% --><listitem><para>Slovak (5 million)</para></listitem>
-      <!-- 99.98% --><listitem><para>Spanish (over 350 million)</para></listitem>
-      <!-- 87.12% --><listitem><para>Swedish (9 million)</para></listitem>
-      <!-- 81.07% --><listitem><para>Thai (60 million)</para></listitem>
-      <!-- 90.05% --><listitem><para>Turkish (150 million)</para></listitem>
-      <!-- 95.39% --><listitem><para>Ukrainian (50 million)</para></listitem>
-      <!-- 99.92% --><listitem><para>Vietnamese (68 million)</para></listitem>
-      <!-- 96.41% --><listitem><para>Welsh (575,000)</para></listitem>
+  <itemizedlist>
+      <!-- 89.75% --><listitem><para>Albanian</para></listitem>
+      <!-- 92.89% --><listitem><para>Basque</para></listitem>
+      <!-- 83.77% --><listitem><para>Bengali</para></listitem>
+      <!-- 95.63% --><listitem><para>Brazilian Portuguese</para></listitem>
+      <!-- 99.93% --><listitem><para>Bulgarian</para></listitem>
+      <!-- 99.80% --><listitem><para>Catalan</para></listitem>
+      <!-- 95.77% --><listitem><para>Chinese (Hong Kong)</para></listitem>
+      <!-- 99.08% --><listitem><para>Chinese (Taiwan)</para></listitem>
+      <!-- 95.77% --><listitem><para>Chinese Simplified</para></listitem>
+      <!-- 94.61% --><listitem><para>Czech</para></listitem>
+      <!-- 86.86% --><listitem><para>Danish</para></listitem>
+      <!-- 99.93% --><listitem><para>Dutch</para></listitem>
+      <!-- 99.32% --><listitem><para>Dzongkha</para></listitem>
+      <!-- 100.0% --><listitem><para>English</para></listitem>
+      <!-- 83.29% --><listitem><para>Estonian</para></listitem>
+      <!-- 99.93% --><listitem><para>Finnish</para></listitem>
+      <!-- 99.75% --><listitem><para>French</para></listitem>
+      <!-- 96.33% --><listitem><para>Galician</para></listitem>
+      <!-- 99.93% --><listitem><para>German</para></listitem>
+      <!-- 98.78% --><listitem><para>Greek</para></listitem>
+      <!-- 100.0% --><listitem><para>Gujarati</para></listitem>
+      <!-- 61.49% --><listitem><para>Hebrew</para></listitem>
+      <!-- 96.46% --><listitem><para>Hindi</para></listitem>
+      <!-- 97.67% --><listitem><para>Hungarian</para></listitem>
+      <!-- 88.87% --><listitem><para>Indian Bengali</para></listitem>
+      <!-- 95.19% --><listitem><para>Indonesian</para></listitem>
+      <!-- 91.92% --><listitem><para>Italian</para></listitem>
+      <!-- 99.93% --><listitem><para>Japanese</para></listitem>
+      <!-- 99.32% --><listitem><para>Korean</para></listitem>
+      <!-- 95.71% --><listitem><para>Latvian</para></listitem>
+      <!-- 99.93% --><listitem><para>Lithuanian</para></listitem>
+      <!-- 100.0% --><listitem><para>Macedonian</para></listitem>
+      <!-- 82.73% --><listitem><para>Malayalam</para></listitem>
+      <!-- 82.39% --><listitem><para>Nepali</para></listitem>
+      <!-- 98.08% --><listitem><para>Norwegian Bookmal</para></listitem>
+      <!-- 76.56% --><listitem><para>Norwegian Nynorsk</para></listitem>
+      <!-- 67.33% --><listitem><para>Oriya</para></listitem>
+      <!-- 77.79% --><listitem><para>Persian</para></listitem>
+      <!-- 87.67% --><listitem><para>Polish</para></listitem>
+      <!-- 99.93% --><listitem><para>Portuguese</para></listitem>
+      <!-- 97.34% --><listitem><para>Punjabi</para></listitem>
+      <!-- 90.73% --><listitem><para>Romanian</para></listitem>
+      <!-- 99.93% --><listitem><para>Russian</para></listitem>
+      <!-- 94.32% --><listitem><para>Serbian</para></listitem>
+      <!-- 61.78% --><listitem><para>Slovak</para></listitem>
+      <!-- 83.22% --><listitem><para>Slovenian</para></listitem>
+      <!-- 99.93% --><listitem><para>Spanish</para></listitem>
+      <!-- 99.93% --><listitem><para>Swedish</para></listitem>
+      <!-- 93.82% --><listitem><para>Tamil</para></listitem>
+      <!-- 83.81% --><listitem><para>Thai</para></listitem>
+      <!-- 92.24% --><listitem><para>Turkish</para></listitem>
+      <!-- 99.92% --><listitem><para>Ukrainian</para></listitem>
+      <!-- 99.88% --><listitem><para>Vietnamese</para></listitem>
+      <!-- 95.77% --><listitem><para>Welsh</para></listitem>
     </itemizedlist>
   </para>
 
-  <para>Note that Basque, Bengali, Chinese (Hong Kong), Estonian
-     and Persian are new supported languages in GNOME &version;,
+  <para>TODO: Update this text: Note that Dzongka, Hebrew Indian Bengali, Latvian, Malayalam, Norwegian Nynorsk, 
+    Oriya, Slovenian and Tamil are new supported languages in GNOME &version;,
     thanks to the hard work of their translators. Also noteworthy are that British
     and Canadian English are supported.</para>
   
