@@ -1,5 +1,13 @@
 2007-09-04  Murray Cumming  <murrayc@murrayc.com>
 
+	* docbook/C/rni18n.xml: Updated with the list from 2.16, which 
+	is more likely to contain more useful text. Danilo will update 
+	this soon for 2.20. Note that we abandonded the (bikesheddable) 
+	numbers of speakers of languages in 2.16. There was no list 
+	in the 2.18 notes. 
+
+2007-09-04  Murray Cumming  <murrayc@murrayc.com>
+
 	* docbook/C/rndevelopers.xml: Removed more empty link tags.
 	* docbook/C/figures/rnusers-seahorse-encrypt-multiple-files.png: 
 	Recreated with the new clearlooks themes.
